# mlops_agh_course

./: .gitignore
homework1/src/core/: model_repository.py
homework12/: .gitignore  compose.yaml  pyproject.toml
homework12/config/: airflow.cfg
homework12/dags/: 01_create_datasets.py  02_train_models.py
homework12/init-sql/: create_tables.sql
homework12/localstack-init/ready.d/: 01-create-buckets.sh
homework12/report/: report.md
homework13/: report.md
homework3/: homework.ipynb
homework4/: homework.ipynb
homework6/: homework.ipynb  homework_old.ipynb
lab1/: pyproject.toml
lab1/src/: app.py
lab1/src/utils/: config.py
lab10/: .gitignore  main.tf  report.md  repository.tf
lab10/aliases/: providers.tf  s3.tf
lab10/exercise1/: .terraform.lock.hcl  variables.tf
lab10/exercise2/: outputs.tf  s3.tf  variables.tf
lab10/exercise3/: main.tf  s3.tf  variables.tf
lab10/exercise3/modules/s3_bucket/: main.tf  variables.tf
lab10/imgs/: report.md
lab10/project1/: outputs.tf  providers.tf
lab12/: compose.yaml  lab_report.md  pyproject.toml
lab12/config/: airflow.cfg
lab12/dags/: 02_class_pipeline.py  04_backfilling.py  05_scheduling_with_venvs.py  06_s3_integration.py  07_connection_and_variables.py
lab12/init-sql/: create_tables.sql
lab13/: guard_rails.py  guardrails_ai.py  hf_inference.py  host_server.py  openai_inference.py  pyproject.toml  report.md  tools_calling.py
lab13/exercise1/: run_prompts.py
lab13/exercise2/: run_tools.py
lab13/exercise3/: mcp_server.py
lab13/exercise4/: viz_server.py
lab13/exercise5/: fishing_fanatic.py
lab3/: notebook_polars.ipynb
lab4/: docker-compose.yml  lab.ipynb  main.ipynb  pyproject.toml
lab6/: LAB_INSTRUCTION.ipynb  pyproject.toml
lab7/: lab.ipynb  pyproject.toml
lab7/onnx_app/: Dockerfile  onnx_app.py  pyproject.toml
lab7/torch_app/: Dockerfile  pyproject.toml  torch_app.py
lab8/: LAB_INSTRUCTION.ipynb
lab9/: report.md  test.py
