[project]
name = "MLOps_course_AGH_lab_07"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "torch==2.7.0",
    "pydantic",
    "fastapi>=0.118.2",
    "uvicorn>=0.37.0",
    "torch>=2.7.0",
    "transformers>=4.57.0",
    "setuptools>=65.5.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
